inserted the events section

--- a/_includes/news.html
+++ b/_includes/news.html
@@ -1,6 +1,6 @@
 <div class="news container-fluid">
     <div class="row">
-        <div class="col-4">
+        <div class="col-4 dates">
             <p class=" pt-2 text-center text-light">Important Dates</p>
             <div class="card card-body">
                 <ul>
@@ -10,7 +10,7 @@
                 </ul>
             </div>
         </div>
-        <div class="col-8">
+        <div class="col-8 news-events">
             <p class="pt-2 text-center text-light">COSAS News</p>
             <div class="card card-body">
                 <ul>
