--- a/_includes/home.html
+++ b/_includes/home.html
@@ -1,4 +1,4 @@
-<div id="home" class="">
+<div id="home" class="home">
     <div class="container-fluid d-flex justify-content-center">
         <p id="welcome-title" class="text-center align-middle">Welcome to the<br><b>COSAS HUB</b></p>
     </div>
