--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-expand-sm" id="navbar">
     <button class="navbar-toggler border-light" type="button" data-toggle="collapse" data-target="#navbarToggler"
         aria-controls="navbarToggler" aria-expanded="false" aria-label="Toggle navigation">
-        <img src="../static_files/assets/svg/home-icon.svg">
+        <img src="{{ site.baseurl }}/static_files/assets/svg/home-icon.svg">
     </button>
 
     <div class="navbar-collapse collapse justify-content-center" id="navbarToggler">
