configured the events

--- a/_includes/events.html
+++ b/_includes/events.html
@@ -7,7 +7,7 @@
             <img src='{{ site.baseurl }}/static_files/assets/svg/{{ post.image }}' class="mr-3 col-2 img-thumbnail border-0" alt="...">
             <div class="col-9 py-3">
                 <p>{{ post.title }}</p>
-                <p>{{ post.date }}</p>
+                <p>{{ post.event }}</p>
                 <p>{{ post.excerpt }}</p>
                 <hr>
                 <a a href="{{ post.url }}" class="mx-auto btn btn-primary">Learn More</a>
