--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -7,7 +7,7 @@
         <p class="card card-body border-0 justify-content-center text-center pt-1"><b>Weekly COSAS Question</b><br>
             What is your dream co-op job? &#128525;
         </p>
-        <form id="contactForm" class="card card-body" target="hidden_iframe"
+        <form id="contactForm" class="card card-body border-0" target="hidden_iframe"
             action="https://docs.google.com/forms/u/0/d/e/1FAIpQLSeIislOFaxbgp_w3xd1SFMlfCeG_h27MkhtDMw1yZF6PAo_nA/formResponse"
             method="POST">
             <div class="form-group row">
