--- a/_includes/about.html
+++ b/_includes/about.html
@@ -1,6 +1,6 @@
 <div id="about" class="container justify-content-center section">
     <p class="display-4 text-center section-header">Learn more about COSAS</p>
-    <div class="card mx-auto border-0 text-left justify-content-center">
+    <div class="card bg-transparent mx-auto border-0 text-left justify-content-center">
         {% for content_hash in site.data.about.cosas %}
         <p>{{ content_hash.content }}</p>
         <button class="btn col-md-3 mx-auto py-3 btn-primary" type="button" data-toggle="collapse"
