--- a/_includes/events.html
+++ b/_includes/events.html
@@ -4,7 +4,7 @@
         <li class="media">
             <div class="row media-body">
             {% for post in site.posts %}
-            <img src='{{ site.baseurl }}/static_files/assets/svg/{{ post.image }}' class="mr-3 col-2 img-thumbnail border-0" alt="...">
+            <img src='{{ site.baseurl }}/static_files/assets/svg/{{ post.image }}' class="mr-3 col-sm-6 col-md-2 img-thumbnail border-0" alt="...">
             <div class="col-9 py-3">
                 <p>{{ post.title }}</p>
                 <p>{{ post.event }}</p>
