--- a/_includes/home.html
+++ b/_includes/home.html
@@ -1,5 +1,5 @@
-<div id="home" class="home">
-    <div class="container-fluid d-flex justify-content-center">
+<div id="home" class="container home justify-content-center">
+    <div class="d-flex">
         <p id="welcome-title" class="text-center align-middle">Welcome to the<br><b>COSAS HUB</b></p>
     </div>
 </div>
