--- a/_includes/news.html
+++ b/_includes/news.html
@@ -1,4 +1,4 @@
-<div class="news container-fluid">
+<div class="news container card card-body">
     <div class="row">
         <div class="col-4 dates">
             <p class=" pt-2 text-center text-light">Important Dates</p>
