--- a/css/styles.css
+++ b/css/styles.css
@@ -18,7 +18,6 @@ body, html {
     scroll-behavior: smooth;
     height: 100;
     overflow-x: hidden;
-    background-color: var(--cosas-secondary);
 }
 
 /*_________________________Global____________________________*/
@@ -59,14 +58,13 @@ a, a:hover {
 
 .home {
     height: 75vh;
-    background-color: var(--cosas-sapphires);
     display: flex;
     align-items:center;
-
+    background-color: var(--cosas-secondary);
     background-image: url(../static_files/assets/svg/2020.svg);
     background-repeat: no-repeat;
     background-position: center;
-    background-position-y: 35%;
+    background-position-y: top;
     background-size: calc(5vw + 100vh);
     background-attachment: fixed;
 }
