removed the news section

--- a/_includes/news.html
+++ b/_includes/news.html
@@ -1,16 +1,19 @@
-<div class="news container card card-body">
+<div class="news container jumbotron">
     <div class="row">
-        <div class="col-4 dates">
+        <div class="col-5 dates">
             <p class=" pt-2 text-center text-light">Important Dates</p>
             <div class="card card-body">
                 <ul>
                     <li>Aug 24: Mentor Applications</li>
                     <li>Aug 24: Mentor Applications</li>
                     <li>Aug 24: Mentor Applications</li>
+                    <li>Aug 24: Mentor Applications</li>
+                    <li>Aug 24: Mentor Applications</li>
+                    <li>Aug 24: Mentor Applications</li>
                 </ul>
             </div>
         </div>
-        <div class="col-8 news-events">
+        <div class="col-7 news-events">
             <p class="pt-2 text-center text-light">COSAS News</p>
             <div class="card card-body">
                 <ul>
