--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,5 @@
 :root {
-    --text-size: 2vw;
+    --text-size: 2vh;
     --title-size: calc(3vw + 2vh);
 
     --header-padding: 2rem;
@@ -30,6 +30,10 @@ body, html {
     padding: 3vh 0 3vh 0 
 }
 
+p {
+    font-size: var(--text-size);
+}
+
 /*_________________________NavSection________________________*/
 
 #navbar {
@@ -57,14 +61,13 @@ a, a:hover {
 /*_________________________HomeSection________________________*/
 
 .home {
-    height: 75vh;
+    height: 100vh;
     display: flex;
     align-items:center;
     background-color: var(--cosas-secondary);
     background-image: url(../static_files/assets/svg/2020.svg);
     background-repeat: no-repeat;
     background-position: center;
-    background-position-y: top;
     background-size: calc(5vw + 100vh);
     background-attachment: fixed;
 }
@@ -78,7 +81,6 @@ a, a:hover {
 
 .news {
     background-color: var(--cosas-grey);
-    height: 25vh;
 }
 
 .dates, .news-updates {
