--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -20,10 +20,34 @@
                 <textarea class="form-control" type="text" placeholder="Questions, comments, concerns"
                     name="entry.1648820328"></textarea>
             </div>
-            <button id="submit-form" onclick="window.location.replace('pages/thankyou.html')"
-                class="btn col-md-3 mx-auto py-3 btn-primary" type="submit">Submit</button>
-        </form>
+            <button id="submit-form" type="button" class="btn btn-primary col-md-3 mx-auto py-3" data-toggle="modal" data-target="#exampleModal">
+                    Submit
+                  </button>
+        
+            </form>
 
         <iframe name="hidden_iframe" id="hidden_iframe" style="display:none;"></iframe>
     </div>
 </div>
+
+<!-- Button trigger modal -->
+
+  
+  <!-- Modal -->
+  <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="exampleModalLabel">COSAS Alert</h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+          Thank you for reaching out to us, have a great day!
+        </div>
+        <div class="modal-footer">
+        </div>
+      </div>
+    </div>
+  </div>
