--- a/_includes/events.html
+++ b/_includes/events.html
@@ -1,18 +1,16 @@
 <div id="events" class="container section">
-    <p class="display-4 text-center">Our Events</p>
-    <ul class="list-unstyled">
+    <p class="display-4 text-center section-header">Our Events</p>
+    <ul class="list-unstyled card card-body">
         <li class="media">
             <div class="row media-body">
             {% for post in site.posts %}
-            <img src='{{ site.baseurl }}/static_files/assets/svg/{{ post.image }}' class="mr-3 col-sm-6 col-md-2 img-thumbnail border-0" alt="...">
+            <img src='{{ site.baseurl }}/static_files/assets/svg/{{ post.image }}' class="col-sm-6 col-md-2 img-thumbnail border-0" alt="...">
             <div class="col-9 py-3">
-                <p>{{ post.title }}</p>
-                <p>{{ post.event }}</p>
+                <h2>{{ post.title }}</h2>
+                <h4>{{ post.event }}</h4>
                 <p>{{ post.excerpt }}</p>
-                <hr>
                 <a a href="{{ post.url }}" class="mx-auto btn btn-primary">Learn More</a>
             </div>
-            
             {% endfor %}
             </div>
         </li>
