--- a/css/styles.css
+++ b/css/styles.css
@@ -23,11 +23,11 @@ body, html {
 /*_________________________Global____________________________*/
 
 .section {
-    margin: auto auto 5vh auto
+    padding-bottom: 3vh;
 }
 
 .section-header {
-    padding: 3vh 0 3vh 0 
+    padding: 3vh 0 2vh 0 
 }
 
 p {
@@ -86,6 +86,18 @@ a, a:hover {
 .dates, .news-updates {
     overflow: hidden !important;
 }
+
+/*_______________________About__________________________*/
+
+.about-divider {
+    height: 15vh;
+    background-image: url(../static_files/assets/images/sauder.png);
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-position: center;
+    background-size: cover;
+}
+
 
 /*_________________________Section for contact________________*/
 #contact {
