--- a/_includes/initiative.html
+++ b/_includes/initiative.html
@@ -1,6 +1,6 @@
 <div id="initiatives" class="container-fluid section">
     <p class="display-4 text-center section-header">Featured Initiatives</p>
-    <div class="row justify-content-center ">
+    <div class="row justify-content-center">
         {% for initiative in site.initiatives %}
         <div id="test" class="card card-body bg-dark col-md-5 m-2">
             <a href="{{ initiative.url }}" class="d-flex">
@@ -15,3 +15,4 @@
         {% endfor %}
     </div>
 </div>
+<hr class="container">
