--- a/_includes/home.html
+++ b/_includes/home.html
@@ -1,5 +1,8 @@
-<div id="home" class="home row container align-items-center mx-auto">
-    <div class="col">
-        <p id="welcome-title" class="text-center align-middle">Welcome to the<br><b>COSAS HUB</b></p>
+<div id="home" class="home row container-fluid align-items-center mx-auto">
+    <div class="col-1"></div>
+    <div class="col-md-4 col-sm-12">
+        <p class="welcome-title">Welcome to the</p>
+        <p class="display-1 text-uppercase font-weight-bold">cosas hub</p>
+        <p class="w-75 welcome-title">Your one-stop location for all news and information related to Co-op at UBC Sauder School of Business</p>
     </div>
 </div>
