--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,7 +1,7 @@
 <div class="container-fluid justify-content-center" id="footer">
     <p class="text-center pt-4 pb-0">Co-op Student Association of Sauder</p>
     <div class="container row mx-auto justify-content-center">
-        <a id="email" data-placement="left" role="button" data-toggle="popover"
+        <a class="email" data-placement="left" role="button" data-toggle="popover"
             title="Email"
             data-content="cosas.sauder@gmail.com">
             <img class="footer-icon" src="{{ site.baseurl }}/static_files/assets/svg/gmail.svg">
