changed the team section background

--- a/css/styles.css
+++ b/css/styles.css
@@ -153,3 +153,7 @@ a, a:hover {
 .bg-primary {
     background-color: var(--cosas-sapphires) !important;
 }
+
+.bg-dark {
+    background-color: var(--cosas-grey) !important;
+}
