--- a/_includes/team.html
+++ b/_includes/team.html
@@ -1,6 +1,6 @@
 <hr class="container">
-<div id="team" class="container-fluid">
-    <p class="display-4 text-center section-header">Our Team</p>
+<div id="team" class="container-fluid bg-dark">
+    <p class="display-4 text-center text-light section-header">Our Team</p>
     <div class="row w-75 mx-auto d-flex justify-content-center flex-wrap section">
         {% for person in site.data.team.team %}
         <div class="card col-md-2 col-sm-8 m-2">
