trying to get flavicon to show

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,7 +9,7 @@
         integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <link rel="stylesheet" href="{{ site.baseurl }}/css/styles.css">
 
-    <link rel='shortcut icon' href='{{ site.baseurl }}/favicon.ico'/>
+    <link rel='shortcut icon' href='{{ site.baseurl }}/favicon.ico?'/>
 </head>
 <body>
     {{ content }}
