added some fade animations

--- a/_includes/about.html
+++ b/_includes/about.html
@@ -1,4 +1,4 @@
-<div id="about">
+<div id="about" class="about load-hidden">
     <div class="about-divider"></div>
     <div class="container-fluid justify-content-center section">
         <p class="display-4 text-center section-header">Who We Are</p>
