--- a/_includes/home.html
+++ b/_includes/home.html
@@ -1,4 +1,4 @@
-<div id="home" class="home row d-flex align-items-center container-fluid mx-auto">
+<div id="home" class="home load-hidden row d-flex align-items-center container-fluid mx-auto">
     <div class="col-1"></div>
     <div class="border-left bg-transparent col-md-4 col-sm-12">
         <p class="welcome-title">Welcome to the</p>
