--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -1,4 +1,4 @@
-<div id="contact" class="container-fluid justify-content-center">
+<div id="contact" class="load-hidden contact container-fluid justify-content-center">
     <h1 class="display-4 text-center section-header">Contact Us</h1>
     <div class="card card-body col-md-6 col-sm-8 mx-auto">
         <p class="card card-body border-0 justify-content-center text-center">We would love to hear from you! Feel
