--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -7,8 +7,8 @@
     <div class="navbar-collapse collapse justify-content-center" id="navbarToggler">
         <ul class="navbar-nav">
             {% for nav in site.data.navigation.topnav %}
-            <li class="nav-item">
-                <a class="nav-link" href="{{ nav.link }}">{{ nav.name }}</a>
+            <li class="load-hidden nav-link">
+                <a class="nav-item" href="{{ nav.link }}">{{ nav.name }}</a>
             </li>
             {% endfor %}
         </ul>
