--- a/_includes/team.html
+++ b/_includes/team.html
@@ -2,7 +2,7 @@
     <p class="display-4 text-center text-light section-header">Our Team</p>
     <div class="row w-75 mx-auto d-flex justify-content-center flex-wrap section">
         {% for person in site.data.team.team %}
-        <div class="card col-md-2 col-sm-8 m-2">
+        <div class="team load-hidden card col-md-2 col-sm-8 m-2">
             <a type="button" data-toggle="modal" data-target="#{{ person.id }}">
                 <img class="card-img-top pt-3 rounded-circle" src="../static_files/assets/images/{{ person.img }}">
                 <div>
