added some more fades

--- a/_includes/about.html
+++ b/_includes/about.html
@@ -1,6 +1,6 @@
-<div id="about" class="about load-hidden">
-    <div class="about-divider"></div>
-    <div class="container-fluid justify-content-center section">
+<div id="about" class="">
+    <div class="about-divider about-scene load-hidden"></div>
+    <div class="container-fluid justify-content-center section about load-hidden">
         <p class="display-4 text-center section-header">Who We Are</p>
         <div class="container card bg-transparent border-0 text-left justify-content-center">
             {% for content_hash in site.data.about.cosas %}
@@ -23,5 +23,5 @@
             </div>
         </div>
     </div>
-    <div class="about-divider"></div>
+    <div class="about-divider about-scene load-hidden"></div>
 </div>
