--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -1,53 +1,55 @@
 <div id="contact" class="load-hidden contact container-fluid justify-content-center">
-    <h1 class="display-4 text-center section-header">Contact Us</h1>
-    <div class="card card-body col-md-6 col-sm-8 mx-auto">
-        <p class="card card-body border-0 justify-content-center text-center">We would love to hear from you! Feel
-            free to ask us any questions you may have about COSAS or Co-op in general. We also love feedback so if
-            you have any suggestions or ideas for COSAS, please don't hesitate to fill in the form below!</p>
-        <p class="card card-body border-0 justify-content-center text-center pt-1"><b>Weekly COSAS Question</b><br>
-            What is your dream co-op job? &#128525;
-        </p>
-        <form id="contactForm" class="card card-body border-0" target="hidden_iframe"
-            action="https://docs.google.com/forms/u/0/d/e/1FAIpQLSeIislOFaxbgp_w3xd1SFMlfCeG_h27MkhtDMw1yZF6PAo_nA/formResponse"
-            method="POST">
-            <div class="form-group row">
-                <input class="form-control" type="text" placeholder="Name" name="entry.412501421">
-            </div>
-            <div class="form-group row">
-                <input class="form-control" type="text" placeholder="Email Address" name="entry.850662147">
-            </div>
-            <div class="form-group row">
-                <textarea class="form-control" type="text" placeholder="Questions, comments, concerns"
-                    name="entry.1648820328"></textarea>
-            </div>
-            <button id="submit-form" type="button" class="btn btn-primary col-md-3 mx-auto py-3" data-toggle="modal" data-target="#exampleModal">
-                    Submit
-                  </button>
-        
-            </form>
+  <h1 class="display-4 text-center section-header">Contact Us</h1>
+  <div class="card card-body col-md-6 col-sm-8 mx-auto">
+    <p class="card card-body border-0 justify-content-center text-center">We would love to hear from you! Feel
+      free to ask us any questions you may have about COSAS or Co-op in general. We also love feedback so if
+      you have any suggestions or ideas for COSAS, please don't hesitate to fill in the form below!</p>
+    <p class="card card-body border-0 justify-content-center text-center pt-1"><b>Weekly COSAS Question</b><br>
+      What is your dream co-op job? &#128525;
+    </p>
+    <form id="contactForm" class="card card-body border-0" target="hidden_iframe"
+      action="https://docs.google.com/forms/u/0/d/e/1FAIpQLSeIislOFaxbgp_w3xd1SFMlfCeG_h27MkhtDMw1yZF6PAo_nA/formResponse"
+      method="POST">
+      <div class="form-group row">
+        <input class="form-control" type="text" placeholder="Name" name="entry.412501421">
+      </div>
+      <div class="form-group row">
+        <input class="form-control" type="text" placeholder="Email Address" name="entry.850662147">
+      </div>
+      <div class="form-group row">
+        <textarea class="form-control" type="text" placeholder="Questions, comments, concerns"
+          name="entry.1648820328"></textarea>
+      </div>
+      <button id="submit-form" type="button" class="btn btn-primary col-md-3 mx-auto py-3" data-toggle="modal"
+        data-target="#exampleModal">
+        Submit
+      </button>
 
-        <iframe name="hidden_iframe" id="hidden_iframe" style="display:none;"></iframe>
-    </div>
+    </form>
+
+    <iframe name="hidden_iframe" id="hidden_iframe" style="display:none;"></iframe>
+  </div>
 </div>
 
 <!-- Button trigger modal -->
 
-  
-  <!-- Modal -->
-  <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-    <div class="modal-dialog modal-dialog-centered" role="document">
-      <div class="modal-content">
-        <div class="modal-header">
-          <h5 class="modal-title" id="exampleModalLabel">COSAS Alert</h5>
-          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-            <span aria-hidden="true">&times;</span>
-          </button>
-        </div>
-        <div class="modal-body">
-          Thank you for reaching out to us, have a great day!
-        </div>
-        <div class="modal-footer">
-        </div>
+
+<!-- Modal -->
+<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+  aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">COSAS Alert</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        Thank you for reaching out to us, have a great day!
+      </div>
+      <div class="modal-footer">
       </div>
     </div>
   </div>
+</div>
