added responsive css

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,5 +24,6 @@
         integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
         crossorigin="anonymous"></script>
     <script src="{{ site.baseurl }}/static_files/scripts/scripts.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/jquery-validation@1.19.2/dist/jquery.validate.min.js"></script>
 </body>
 </html>
