--- a/css/styles.css
+++ b/css/styles.css
@@ -25,7 +25,7 @@ body, html {
 }
 
 .row:before, .row:after {
-    display: none !important;
+    display: flex !important;
 }
 /*_________________________Global____________________________*/
 
