--- a/css/styles.css
+++ b/css/styles.css
@@ -163,3 +163,17 @@ a:active, a:hover {
 html.sr .load-hidden {
     visibility: hidden;
 }
+
+@supports (-webkit-touch-callout: none) {
+    .home {
+        height: 100vh;
+        display: flex;
+        align-items:center;
+        background-color: var(--cosas-secondary);
+        background-image: url('../static_files/assets/svg/2020.svg');
+        background-repeat: no-repeat;
+        background-position: center;
+        background-position-x: 85%;
+        background-size: calc(125vh);
+    } 
+}
