--- a/_includes/team.html
+++ b/_includes/team.html
@@ -1,6 +1,6 @@
 <div id="team" class="container-fluid bg-dark">
     <p class="display-4 text-center text-light section-header">Our Team</p>
-    <div class="row w-75 mx-auto d-flex justify-content-center flex-wrap section">
+    <div class="row w-75 mx-auto d-flex justify-content-center section">
         {% for person in site.data.team.team %}
         <div class="team load-hidden card col-md-2 col-sm-8 m-2">
             <a type="button" data-toggle="modal" data-target="#{{ person.id }}">
@@ -10,6 +10,7 @@
                 </div>
             </a>
         </div>
+
         <div class="modal fade" id="{{ person.id }}" tabindex="-1" role="dialog" aria-labelledby="exampleModalLongTitle"
             aria-hidden="true">
             <div class="modal-dialog" role="document">
