--- a/_includes/events.html
+++ b/_includes/events.html
@@ -1,19 +1,19 @@
 <div id="events" class="container section">
     <p class="display-4 text-center section-header">Our Events</p>
-    <ul class="list-unstyled card card-body">
-        <li class="card card-body row">
+    <div class="list-unstyled card card-body">
+        <div class="card card-body ">
             {% for post in site.posts %}
-            <div>
-            <img src='{{ site.baseurl }}/static_files/assets/svg/{{ post.image }}'
-                class="col-sm-6 col-md-2 card-img-top border-0 load-hidden events" alt="...">
-            <div class=" card-footer col-9 py-3 load-hidden events">
-                <h2>{{ post.title }}</h2>
-                <h4>{{ post.event }}</h4>
-                <p>{{ post.excerpt }}</p>
-                <a href="{{ post.url }}" class="mx-auto btn btn-primary">Learn More</a>
+            <div class="row">
+                <img src='{{ site.baseurl }}/static_files/assets/svg/{{ post.image }}'
+                    class="col-md-3 card-img-left border-0 load-hidden events" alt="...">
+                <div class="col-md-9 col-12 py-3 load-hidden events">
+                    <h2>{{ post.title }}</h2>
+                    <h4>{{ post.event }}</h4>
+                    <p>{{ post.excerpt }}</p>
+                    <a href="{{ post.url }}" class="mx-auto btn btn-primary">Learn More</a>
+                </div>
             </div>
-        </div>
             {% endfor %}
-        </li>
-    </ul>
+        </div>
+    </div>
 </div>
