changed row class

--- a/_includes/events.html
+++ b/_includes/events.html
@@ -4,7 +4,7 @@
         {% for post in site.posts %}
         <div class="card card-body m-2">
             
-            <div class="row">
+            <div class="d-flex row">
                 <img src='{{ site.baseurl }}/static_files/assets/svg/{{ post.image }}'
                     class="col-md-3 card-img-top border-0 load-hidden events" alt="...">
                 <div class="col-md-9 col-12 py-3 load-hidden events">
