changed row class

--- a/_includes/team.html
+++ b/_includes/team.html
@@ -22,7 +22,7 @@
                             <h5 class="modal-title text-center" id="exampleModalLongTitle">{{ person.name }}</h5>
                             <p>Position: {{ person.position }} <br>
                                 Specialization: {{ person.specialization }}</p>
-                            <div class="container row mx-auto justify-content-center">
+                            <div class="container mx-auto justify-content-center">
                                 <a class="email" data-placement="left" role="button" data-toggle="popover" title="Email"
                                     data-content="{{ person.email }}">
                                     <img class="footer-icon"
