--- a/_includes/events.html
+++ b/_includes/events.html
@@ -6,7 +6,7 @@
             
             <div class="d-flex row">
                 <img src='{{ site.baseurl }}/static_files/assets/svg/{{ post.image }}'
-                    class="col-md-3 card-img-top border-0 load-hidden events" alt="...">
+                    class="col-md-3 card-img-top border-0 load-hidden events bg-dark" alt="...">
                 <div class="col-md-9 col-12 py-3 load-hidden events">
                     <h2>{{ post.title }}</h2>
                     <h4>{{ post.event }}</h4>
