--- a/_includes/team.html
+++ b/_includes/team.html
@@ -1,6 +1,6 @@
 <div id="team" class="container-fluid bg-dark">
     <p class="display-4 text-center text-light section-header">Our Team</p>
-    <div class="row w-75 mx-auto d-flex justify-content-center section">
+    <div class="w-75 flex-wrap mx-auto d-flex justify-content-center section">
         {% for person in site.data.team.team %}
         <div class="team load-hidden card col-md-2 col-sm-8 m-2">
             <a type="button" data-toggle="modal" data-target="#{{ person.id }}">
@@ -22,7 +22,7 @@
                             <h5 class="modal-title text-center" id="exampleModalLongTitle">{{ person.name }}</h5>
                             <p>Position: {{ person.position }} <br>
                                 Specialization: {{ person.specialization }}</p>
-                            <div class="container mx-auto justify-content-center">
+                            <div class="container row mx-auto justify-content-center">
                                 <a class="email" data-placement="left" role="button" data-toggle="popover" title="Email"
                                     data-content="{{ person.email }}">
                                     <img class="footer-icon"
