--- a/_includes/home.html
+++ b/_includes/home.html
@@ -1,8 +1,8 @@
 <div id="home" class="home row d-flex align-items-center container-fluid mx-auto">
     <div class="col-1"></div>
-    <div class="border-left bg-transparent col-md-4 col-sm-12">
+    <div class="border-left bg-transparent col-md-5 col-sm-12">
         <p class="welcome-title">Welcome to the</p>
-        <p class="display-1 text-uppercase font-weight-bold">cosas hub</p>
+        <p class="display-1 welcome-title text-uppercase font-weight-bold">cosas hub</p>
         <p class="w-75 welcome-title">Your one-stop location for all news and information related to Co-op at UBC Sauder
             School of Business</p>
     </div>
