--- a/_includes/events.html
+++ b/_includes/events.html
@@ -1,21 +1,24 @@
 <div id="events" class="container section">
     <p class="display-4 text-center section-header">Our Events</p>
     <div class="list-unstyled card card-body">
-        {% for post in site.posts %}
-        <div class="card card-body m-2">
-            
+        <div class="card card-body">
+            {% for post in site.posts %}
+
+
             <div class="d-flex flex-wrap">
                 <img src='{{ site.baseurl }}/static_files/assets/svg/{{ post.image }}'
-                    class="col-md-3 card-img-top border-0 load-hidden events bg-dark" alt="...">
-                <div class="col-md-9 col-12 py-3 load-hidden events">
+                    class="col-md-3 h-100 img-fluid border-0 load-hidden events bg-dark" alt="...">
+                <div class="col-md-9 py-3 load-hidden events">
                     <h2>{{ post.title }}</h2>
                     <h4>{{ post.event }}</h4>
                     <p>{{ post.excerpt }}</p>
                     <a href="{{ post.url }}" class="mx-auto btn btn-primary">Learn More</a>
                 </div>
             </div>
-            
+            <hr>
+
+            {% endfor %}
         </div>
-        {% endfor %}
     </div>
+</div>
 </div>
