--- a/css/styles.css
+++ b/css/styles.css
@@ -18,6 +18,7 @@ body, html {
     scroll-behavior: smooth;
     height: 100;
     overflow-x: hidden;
+    background-color: white;
 }
 
 .load-hidden {
@@ -96,7 +97,6 @@ a:active, a:hover {
 }
 
 .welcome-title {
-    font-size: var(--text-size);
     text-shadow: -1px -1px 0 #fff, 1px -1px 0 #fff, -1px 1px 0 #fff, 1px 1px 0 #fff;
 }
 
@@ -165,16 +165,14 @@ html.sr .load-hidden {
     visibility: hidden;
 }
 
-@supports (-webkit-touch-callout: none) {
+@media only screen and (max-device-width: 1024px) {
+
     .home {
         height: 100vh;
-        display: flex;
-        align-items:center;
-        background-color: var(--cosas-secondary);
-        background-image: url('../static_files/assets/svg/2020.svg');
-        background-repeat: no-repeat;
-        background-position: center;
-        background-position-x: 85%;
-        background-size: calc(125vh);
-    } 
+        background-color: var(--cosas-sapphires)
+    }
+
+    .about-divider {
+        display:none !important;
+    }
 }
