--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -7,7 +7,7 @@
     <div class="navbar-collapse collapse justify-content-center" id="navbarToggler">
         <ul class="navbar-nav">
             {% for nav in site.data.navigation.topnav %}
-            <li class="load-hidden nav-link">
+            <li class="navigation">
                 <a class="nav-item" href="{{ nav.link }}">{{ nav.name }}</a>
             </li>
             {% endfor %}
