added navigation animation

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -9,9 +10,11 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
         integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <link rel="stylesheet" href="{{ site.baseurl }}/css/styles.css">
-    <link rel='shortcut icon' href='{{ site.baseurl }}/favicon.ico?'/>
+    <link rel='shortcut icon' href='{{ site.baseurl }}/favicon.ico?' />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.0.0/animate.min.css" />
     <script> ScrollReveal({ mobile: false }) </script>
 </head>
+
 <body>
     {{ content }}
 
@@ -27,4 +30,5 @@
     <script src="{{ site.baseurl }}/static_files/scripts/scripts.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/jquery-validation@1.19.2/dist/jquery.validate.min.js"></script>
 </body>
+
 </html>
