--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -8,7 +8,7 @@
         <ul class="navbar-nav">
             {% for nav in site.data.navigation.topnav %}
             <li class="nav-link">
-                <a class="nav-item" href="{{ nav.link }}">{{ nav.name }}</a>
+                <a class="nav-item animate__animated animate__fadeIn animate__slow" href="{{ nav.link }}">{{ nav.name }}</a>
             </li>
             {% endfor %}
         </ul>
