--- a/_includes/events.html
+++ b/_includes/events.html
@@ -2,15 +2,15 @@
     <p class="display-4 text-center section-header">Our Events</p>
     <div class="list-unstyled card card-body">
         <div class="card card-body">
-            {% for post in site.posts %}
-
+            {% for post in site.posts reversed limit:5 %}
 
             <div class="d-flex flex-wrap">
-                <img src='{{ site.baseurl }}/static_files/assets/svg/{{ post.image }}'
-                    class="col-md-3 h-100 img-fluid border-0 load-hidden events bg-dark" alt="...">
+                <img src='{{ site.baseurl }}/static_files/assets/{{ post.image }}'
+                    class="col-md-3 h-100 img-fluid border-0 align-self-center load-hidden events" alt="...">
                 <div class="col-md-9 py-3 load-hidden events">
                     <h2>{{ post.title }}</h2>
-                    <h4>{{ post.event }}</h4>
+                    <h4>{{ post.event-date }}</h4>
+                    <p>Registration: {{ post.event-status }}</p>
                     <p>{{ post.excerpt }}</p>
                     <a href="{{ post.url }}" class="mx-auto btn btn-primary">Learn More</a>
                 </div>
