--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -5,8 +5,10 @@ layout: default
 <div class="jumbotron bg-primary"></div>
 
 <div class="container">
-<h1>{{ page.title }}</h1>
-<p>{{ page.date | date_to_string }}</p>
+<h1 class="text-center">{{ page.title }}</h1>
+<img class="col-5 m-3 d-block mx-auto" src="{{ site.baseurl }}/static_files/assets/{{ page.image }}">
+{{ page.content }}
 
-{{ content }}
 </div>
+<hr class="container">
+{% include footer.html %}
